--- a/Time_Series_Assignment/Tex/ref.bib
+++ b/Time_Series_Assignment/Tex/ref.bib
@@ -40,3 +40,18 @@
 	year = {2002},
 	pages = {65--105},
 }
+
+
+@article{detreer,
+	title = {Determinants of the real exchange rate in {South} {Africa}},
+	url = {https://ideas.repec.org/p/csa/wpaper/1997-16.html},
+	abstract = {No abstract is available for this item.},
+	language = {en},
+	number = {1997-16},
+	urldate = {2022-06-28},
+	institution = {Centre for the Study of African Economies, University of Oxford},
+	author = {Aron, Janine and Elbadawi, Ibrahim and Kahn, Brian},
+	month = feb,
+	year = {1998},
+	note = {Publication Title: CSAE Working Paper Series},
+}
